inner inner index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Welcome </title>
 </head>
 <body>
-    <h1>Welcome!!!</h1>
-    <h1>I am from AIML</h1>
-    <h4>Adding h4 tag</h4>
+    <h1>inner inner branch</h1>
 </body>
 </html>
